force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Inbound_Report__c.field-meta.xml
<CustomField>
    <fullName>cpm__Inbound_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Report</label>
    <referenceTo>cpm__Inbound_Report__c</referenceTo>
    <relationshipLabel>Mandate Histories</relationshipLabel>
    <relationshipName>Mandate_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>