force-app/main/default/objects/cpm__Mandate_History__c/fields/cpm__Mandate__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate__c</fullName>
    <label>Mandate</label>
    <referenceTo>cpm__Mandate__c</referenceTo>
    <relationshipLabel>Mandate Histories</relationshipLabel>
    <relationshipName>Mandate_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>